更新对原有版本钱包文件的兼容性